[package]
name = "aha"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["InputBot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
ctrlc = { version = "3.2.2", features = ["termination"] }
inputbot = { version = "0.5.0", path = "InputBot" }
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
strum = "0.24.1"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["parking_lot"] }
